# StructureDetector

./: .gitignore  LICENSE  README.md  environment.yml  environment_mps.yml  labels.json  lock.txt  pyproject.toml  requirements.txt
sources/: detect.py  evaluate.py  train.py
src/: convert_coreml.py  detect.py  evaluate.py  evaluate_coreml.py  test_decoder.py  test_encoder.py  test_visu.py  train.py
src/sdnet/: __init__.py
src/sdnet/cli/: convert_coreml.py  detect.py  evaluate.py  evaluate_coreml.py  train.py
src/sdnet/data/: __init__.py  dataset.py  decoders.py  transforms.py
src/sdnet/model/: evaluator.py  loss.py  network.py  predictor.py  trainer.py
src/sdnet/utils/: __init__.py  args.py  utils.py  visualization.py
