[tool.poetry]
name = "sdnet"
version = "0.1.0"
description = ""
authors = ["Louis Lac <lac.louis5@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
pillow = "^9.5.0"
torch = "^2.0.0"
torchvision = "^0.15.1"
tensorboard = "^2.12.1"
rich = "^13.3.3"
tqdm = "^4.65.0"
xxhash = "^3.2.0"
coremltools = "^7.0b1"
torch-tb-profiler = "^0.4.1"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
